# dev-kit

./: LICENSE  README.md  pyproject.toml
chemistry/: pic50.ipynb
dataset/: catalog.py  iuphar.py  manual_onboarding_catalog.yaml
devkit/: __init__.py
devkit/biology/: readme.md
devkit/chemistry/: __init__.py  activity_cliff.py  chem_conversions.py  pic50.ipynb  readme.md
devkit/chemistry/DrugMoa/: extra.ipynb
devkit/chemistry/LNP/: Activity_Cliff_Explore.ipynb  agile_explore.ipynb  gp_regression.ipynb  off_policy_bo_comparison.ipynb  posterior_vis.py  rascal_debug.py  surrogate_model_lipids.ipynb
devkit/chemistry/viz/: __init__.py  annotate.py  drawing.py  name_that_heterocycle.ipynb  scatter.py
devkit/dataset/: __init__.py  catalog.py  catalog_demo.ipynb
devkit/ml/: __init__.py  gpu_cpu_stats_monitor.py  gpu_cpu_tutorial.ipynb  pytorch_gpu_test.py  pytorch_test.py  wandb_lightning.py
devkit/ml/bayesopt/: closed_loop_botorch_only.py  fit_model_with_torch_optimizer.py  readme.md
devkit/moossse/: __init__.py  chemogenomics.ipynb  readme.md  two_obj_demo.ipynb
devkit/utils/: __init__.py  parallel.py
oed/: mcsss.py  readme.md  two_obj_demo.ipynb
utils/: parallel.py
